--- a/index.html
+++ b/index.html
@@ -27,96 +27,169 @@
     <!--
         - preload images
     -->
+    <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+    <link rel="preload" as="image" href="./assets/images/hero-abs-1.png" media="min-width(768px)">
+    <link rel="preload" as="image" href="./assets/images/hero-abs-2.png" media="min-width(768px)">
 
 </head>
 
 <body>
 
-<!--
+    <!--
     - #HEADER
 -->
 
-<header class="header active" data-header>
-    <div class="container">
+    <header class="header" data-header>
+        <div class="container">
 
-        <h1>
-            <a href="#" class="logo">EduHome</a>
-        </h1>
-
-        <nav class="navbar" data-navbar>
-
-            <div class="navbar-top">
+            <h1>
                 <a href="#" class="logo">EduHome</a>
+            </h1>
 
-                <button class="nav-close-btn" aria-label="Close menu" data-nav-toggler>
-                    <ion-icon name="close-outline"></ion-icon>
+            <nav class="navbar" data-navbar>
+
+                <div class="navbar-top">
+                    <a href="#" class="logo">EduHome</a>
+
+                    <button class="nav-close-btn" aria-label="Close menu" data-nav-toggler>
+                        <ion-icon name="close-outline"></ion-icon>
+                    </button>
+                </div>
+
+                <ul class="navbar-list">
+
+                    <li class="navbar-item">
+                        <a href="#home" class="navbar-link" data-nav-toggler>Home</a>
+                    </li>
+
+                    <li class="navbar-item">
+                        <a href="#about" class="navbar-link" data-nav-toggler>About</a>
+                    </li>
+
+                    <li class="navbar-item">
+                        <a href="#courses" class="navbar-link" data-nav-toggler>Courses</a>
+                    </li>
+
+                    <li class="navbar-item">
+                        <a href="#event" class="navbar-link" data-nav-toggler>Event</a>
+                    </li>
+
+                    <li class="navbar-item">
+                        <a href="#blog" class="navbar-link" data-nav-toggler>Blog</a>
+                    </li>
+
+                    <li class="navbar-item">
+                        <a href="#contact" class="navbar-link" data-nav-toggler>Contact</a>
+                    </li>
+
+                </ul>
+
+
+
+            </nav>
+
+            <div class="header-actions">
+
+                <button class="header-action-btn" aria-label="Open search" data-search-toggler>
+                    <ion-icon name="search-outline"></ion-icon>
+                </button>
+
+                <a href="#" class="header-action-btn login-btn">
+                    <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+
+                    <sapn class="span">Login / Register</sapn>
+                </a>
+
+                <button class="header-action-btn nav-open-btn" aria-label="Open menu" data-nav-toggler>
+                    <ion-icon name="menu-outline"></ion-icon>
+                </button>
+
+            </div>
+
+            <div class="overlay" data-nav-toggler data-overlay></div>
+
+        </div>
+    </header>
+
+
+
+    <!-- 
+    - #SEARCH BOX
+  -->
+
+    <div class="search-container" data-search-box>
+        <div class="container">
+
+            <button class="search-close-btn" aria-label="Close search" data-search-toggler>
+                <ion-icon name="close-outline"></ion-icon>
+            </button>
+
+            <div class="search-wrapper">
+                <input type="search" name="search" placeholder="Search Here..." aria-label="Search" class="search-field">
+
+                <button class="search-submit" aria-label="Submit" data-search-toggler>
+                    <ion-icon name="search-outline"></ion-icon>
                 </button>
             </div>
 
-            <ul class="navbar-list">
-
-                <li class="navbar-item">
-                    <a href="#home" class="navbar-link" data-nav-toggler>Home</a>
-                </li>
-
-                <li class="navbar-item">
-                    <a href="#about" class="navbar-link" data-nav-toggler>About</a>
-                </li>
-
-                <li class="navbar-item">
-                    <a href="#courses" class="navbar-link" data-nav-toggler>Courses</a>
-                </li>
-
-                <li class="navbar-item">
-                    <a href="#event" class="navbar-link" data-nav-toggler>Event</a>
-                </li>
-
-                <li class="navbar-item">
-                    <a href="#blog" class="navbar-link" data-nav-toggler>Blog</a>
-                </li>
-
-                <li class="navbar-item">
-                    <a href="#contact" class="navbar-link" data-nav-toggler>Contact</a>
-                </li>
-
-            </ul>
-
-
-
-        </nav>
-
-        <div class="header-actions">
-
-            <button class="header-action-btn" aria-label="Open search" data-search-btn>
-                <ion-icon name="search-outline"></ion-icon>
-            </button>
-
-            <a href="#" class="header-action-btn login-btn">
-                <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
-
-                <sapn class="span">Login / Register</sapn>
-            </a>
-
-            <button class="header-action-btn nav-open-btn" aria-label="Open menu" data-nav-toggler>
-                <ion-icon name="menu-outline"></ion-icon>
-            </button>
-
         </div>
-
     </div>
-</header>
 
 
-<!--
+
+    <main>
+        <article>
+
+            <!-- #HERO -->
+
+            <section class="hero" id="home" aria-label="hero" style="background-image: url('./assets/images/hero-bg.jpg')">
+                <div class="container">
+
+                    <div class="hero-content">
+
+                        <p class="section-subtitle">>Better Learning Future With Us</p>
+
+                        <h2 class="h1 hero-title">Education Is About Academic Excellence</h2>
+
+                        <p class="hero-text">
+                            Sed eu volutpat arcu, a tincidunt nulla quam, feugiat sit amet ipsum a, dapibus porta velit.
+                        </p>
+
+                        <a href="#" class="btn btn-primary">
+                            <span class="span">Get Started Today</span>
+
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+
+                    </div>
+
+                    <figure class="hero-banner">
+
+                        <img src="./assets/images/hero-banner.png" width="500" height="500" loading="lazy" alt="hero image" class="w-100">
+
+                        <img src="./assets/images/hero-abs-1.png" width="318" height="352" loading="lazy" aria-hidden="true" class="abs-img abs-img-1">
+
+                        <img src="./assets/images/hero-abs-2.png" width="160" height="160" loading="lazy" aria-hidden="true" class="abs-img abs-img-2">
+
+                    </figure>
+
+                </div>
+            </section>
+
+        </article>
+    </main>
+
+
+    <!--
     - custom js link
 -->
-<script src="./assets/js/script.js" defer></script>
+    <script src="./assets/js/script.js" defer></script>
 
-<!--
+    <!--
     - ionicon link
 -->
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
