--- a/index.html
+++ b/index.html
@@ -176,6 +176,281 @@
                 </div>
             </section>
 
+
+
+
+            <!--
+                - #CATEGORY
+            -->
+
+            <section class="section category" aria-label="category">
+                <div class="container">
+
+                    <p class="section-subtitle">Course Categories</p>
+
+                    <h2 class="h2 section-title">Popular topics to learn</h2>
+
+                    <ul class="grip-list">
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="briefcase-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Personal Development</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="file-tray-full-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Human Research</a>
+                                    </h3>
+
+                                    <span class="card-meta">24 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="color-palette-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Art & Design</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="layers-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Business Management</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="laptop-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Web Development</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="thumbs-up-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Lifestyle</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="headset-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Digital Marketing</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="server-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Data Sciences</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="category-card">
+
+                                <div class="card-icon">
+                                    <ion-icon name="medkit-outline"></ion-icon>
+                                </div>
+
+                                <div>
+                                    <h3 class="h3 card-title">
+                                        <a href="#">Health & Fitness</a>
+                                    </h3>
+
+                                    <span class="card-meta">39 Course</span>
+                                </div>
+
+                            </div>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </section>
+
+
+
+            <!--
+                - #ABOUT
+            -->
+
+            <section class="section about" id="about" aria-label="about">
+                <div class="container">
+
+                    <figure class="about-banner">
+                        <img src="./assets/imagens/about-banner.jpg" width="450" height="590" loading="lazy" alt="about-banner" class="w-100 about-img">
+
+                        <img src="./assets/images/about-abs-1.jpg" width="188" height="242" loading="lazy" aria-hidden="true" class="abs-img abs-img-1">
+
+                        <img src="./assets/images/about-abs-2.jpg" width="150" height="200" loading="lazy" aria-hidden="true" class="abs-img abs-img-2">
+                    </figure>
+
+                    <div class="about-content">
+
+                        <p class="section-subtitle">Who We Are</p>
+
+                        <h2 class="h2 section-title">We Offer The Best Carrier</h2>
+
+                        <ul class="about-list">
+
+                            <li class="about-item">
+
+                                <div class="item icon item-icon-1">
+                                    <img src="./assets/images/about-icon-1.png" width="30" height="30" loading="lazy" aria-hidden="true">
+                                </div>
+
+                                <div>
+
+                                    <h3 class="h3 item-title">Industry Expert Instructor</h3>
+
+                                    <p class="item-text">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmoded tempor incididunt dolore magna aliqua.
+                                    </p>
+
+                                </div>
+
+                            </li>
+
+                            <li class="about-item">
+
+                                <div class="item icon item-icon-2">
+                                    <img src="./assets/images/about-icon-2.png" width="30" height="30" loading="lazy" aria-hidden="true">
+                                </div>
+
+                                <div>
+
+                                    <h3 class="h3 item-title">Up-to-Date Course Content</h3>
+
+                                    <p class="item-text">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmoded tempor incididunt dolore magna aliqua.
+                                    </p>
+
+                                </div>
+
+                            </li>
+
+                            <li class="about-item">
+
+                                <div class="item icon item-icon-3">
+                                    <img src="./assets/images/about-icon-3.png" width="30" height="30" loading="lazy" aria-hidden="true">
+                                </div>
+
+                                <div>
+
+                                    <h3 class="h3 item-title">Biggest Student Community</h3>
+
+                                    <p class="item-text">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmoded tempor incididunt dolore magna aliqua.
+                                    </p>
+
+                                </div>
+
+                            </li>
+
+                        </ul>
+
+                        <a href="#" class="btn btn-primary">
+                            <span class="span">Know About Us</span>
+
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+
+                    </div>
+
+                </div>
+            </section>
+
         </article>
     </main>
 
