--- a/index.html
+++ b/index.html
@@ -1329,6 +1329,13 @@
   </article>
   </main>
 
+<!--
+    - BACK TO TOP
+-->
+
+<a href="#top" class="back-top-btn" aria-label="Back to top" data-back-top-btn>
+  <ion-ion name="arrow-up"></ion-ion>
+</a>
 
   <!--
     - custom js link
