--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
         <div class="container">
 
           <figure class="cta-banner">
-            <img src="./assets/images/cta-banner.jpg" width="580" height="380" loading="lazy" alt="cta banner"
+            <img src="./assets/images/cta-banner.png" width="580" height="380" loading="lazy" alt="cta banner"
               class="img-cover">
           </figure>
 
