--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
           <p class="section-subtitle">Course Categories</p>
 
-          <h2 class="h2 section-title">Popular topics to learn</h2>
+          <h2 class="h2 section-title">Popular Topics to Learn</h2>
 
           <ul class="grip-list">
 
@@ -392,7 +392,7 @@
 
               <li class="about-item">
 
-                <div class="item icon item-icon-1">
+                <div class="item-icon item-icon-1">
                   <img src="./assets/images/about-icon-1.png" width="30" height="30" loading="lazy" aria-hidden="true">
                 </div>
 
@@ -411,7 +411,7 @@
 
               <li class="about-item">
 
-                <div class="item icon item-icon-2">
+                <div class="item-icon item-icon-2">
                   <img src="./assets/images/about-icon-2.png" width="30" height="30" loading="lazy" aria-hidden="true">
                 </div>
 
@@ -430,7 +430,7 @@
 
               <li class="about-item">
 
-                <div class="item icon item-icon-3">
+                <div class="item-icon item-icon-3">
                   <img src="./assets/images/about-icon-3.png" width="30" height="30" loading="lazy" aria-hidden="true">
                 </div>
 
@@ -486,7 +486,7 @@
 
                   <span class="badge">Intermediate</span>
 
-                  <button class="wishlist-btn" aria-label="add to wishlist" data-wish-btn>
+                  <button class="whishlist-btn" aria-label="add to whishlist" data-whish-btn>
                     <ion-icon name="heart"></ion-icon>
                   </button>
 
@@ -1334,7 +1334,7 @@
 -->
 
 <a href="#top" class="back-top-btn" aria-label="Back to top" data-back-top-btn>
-  <ion-ion name="arrow-up"></ion-ion>
+  <ion-icon name="arrow-up"></ion-icon>
 </a>
 
   <!--
